example/errors/interpret/library_not_found.box
add std;

add math;

println("still work normally");

add abc;
